// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`container add footer button when useFooter is true and onCancel is provided 1`] = `
{
  "children": {
    "children": {
      "children": {
        "children": "navigation.close",
        "element": "SnapUIFooterButton",
        "key": "default-button",
        "props": {
          "isSnapAction": false,
          "onCancel": [MockFunction],
          "testID": "default-snap-footer-button",
          "variant": "Secondary",
        },
      },
      "element": "Box",
      "key": "default-footer",
      "props": {
        "flexDirection": "row",
        "gap": 16,
        "padding": 16,
        "style": {
          "alignItems": "center",
          "bottom": 0,
          "gap": 16,
          "height": 80,
          "justifyContent": "space-evenly",
          "margin": 16,
          "paddingVertical": 16,
          "position": "absolute",
          "width": "100%",
        },
      },
    },
    "element": "TouchableHighlight",
  },
  "element": "ScrollView",
  "key": "default-scrollview",
  "props": {
    "style": {
      "marginBottom": 0,
    },
    "testID": "snap-ui-renderer__scrollview",
  },
}
`;

exports[`container render basic container with single child 1`] = `
{
  "children": [
    {
      "children": {
        "children": {
          "children": [
            "Hello",
          ],
          "element": "text",
          "props": {
            "style": {
              "gap": 16,
              "margin": 16,
            },
          },
        },
        "element": "TouchableHighlight",
      },
      "element": "ScrollView",
      "key": "default-scrollview",
      "props": {
        "style": {
          "marginBottom": 0,
        },
        "testID": "snap-ui-renderer__scrollview",
      },
    },
  ],
  "element": "Box",
  "props": {
    "style": {
      "flexDirection": "column",
      "flexGrow": 1,
    },
  },
}
`;
